Fix tooltip z-index

--- a/main.css
+++ b/main.css
@@ -162,7 +162,7 @@ hr {
     position: fixed;
     bottom: 2rem;
     right: 2rem;
-    z-index: 999;
+    z-index: 4;
   }
 }
 
@@ -285,7 +285,7 @@ hr {
   border-radius: 8px;
   padding: 0.5rem;
   margin-top: 0.2rem;
-  z-index: 899;
+  z-index: 2;
   box-shadow: 0px 2px 4px rgba(150, 147, 147, 0.2);
 }
 
@@ -366,6 +366,7 @@ hr {
   border-bottom-left-radius: 8px;
   transform: translate(-100%, -100%);
   box-shadow: 0px 2px 4px rgba(150, 147, 147, 0.5);
+  z-index: 3;
 }
 
 .tooltip button {
